[tool.poetry]
name = "mush"
version = "0.1.0"
description = ""
authors = ["'Etherial' <'typicaluserinfinite@gmail.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
